2006-12-02  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, include/pqxx/except.hxx:
  - Documented SIGPIPE when connection breaks, thanks Leandro Lucarella
  - More grouping in connection documentation
 include/pqxx/connection.hxx:
  - Fleshed out "connections" documentation module
2006-11-30  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
  - Try for automake 1.9
  - Minor cleanup
 test/test056.cxx, test/test091.cxx:
  - Fail with postgres/libpq 7.3
 tools/preprelease:
  - Suppress a bit of unwanted output
2006-10-31  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Add trigger even if connection not open, thanks Markus Schmidleitner
2006-10-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
  - Published some more utility classes from pqxx::internal
 src/util.cxx:
  - Don't allocate 5n+1 bytes for escaping; 2n+1 really is enough
 test/test005.cxx, test/test013.cxx, test/test018.cxx, test/test032.cxx,
 test/test056.cxx, test/test060.cxx, test/test061.cxx, test/test064.cxx,
 test/test070.cxx, test/test072.cxx, test/test073.cxx, test/test083.cxx,
 test/test085.cxx, test/test086.cxx:
  - Suppress expected error output from notice processor
  - Correct typo: "existant" should be "existent"
 test/test089.cxx:
  - Account for different ways of detecting nested-transactions capability
2006-10-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.hxx:
  - Removed meaningless const in return type, thanks Jo Ellen Brandmeyer
2006-10-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test090.cxx:
  - Test esc_raw() as well as plain esc()
  - Test nul bytes only with esc_raw(), not with esc()
2006-10-09  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
  - Fixed typo.  How did this ever come through the regression test?
  - Fixed constness problem in esc_raw() for old libpq versions
 src/subtransaction.cxx:
  - If nested transactions not supported, throw feature_not_supported
 test/test093.cxx: